# revelio

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .releaserc.yml  LICENSE  README.md  genindex.html  index.html  objects.inv  package-lock.json  package.json  pyproject.toml  renovate.json  requirements-dev.txt  search.html  searchindex.js
.devcontainer/: Dockerfile  devcontainer.json  postStartCommand.sh  updateContentCommand.sh
.github/actions/cache-pre-commit/: action.yml
.github/workflows/: build-docs.yml  build-release.yml  check-commits.yml
docs/: conf.py  index.rst
src/revelio/: registry.py
src/revelio/config/: base.py
src/revelio/mixins/: configurable_mixin.py  registrable_mixin.py
src/revelio/utils/: hashing.py  typing.py
tests/: test_placeholder.py  test_registry.py
tests/mixins/: test_configurable_mixin.py  test_registrable_mixin.py
tests/utils/typing/: test_hash_dict.py  test_resolve_type_arguments.py
